--- a/package.json
+++ b/package.json
@@ -1,16 +1,23 @@
 {
     "name": "integrating-with-hubspot-i-foundations-practicum",
     "version": "1.0.0",
-    "description": "",
+    "description": "Manage the projects ( custom objects )",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "nodemon index.js"
     },
-    "author": "HubSpot Academy learner",
+    "author": "Sean",
     "license": "ISC",
     "dependencies": {
         "axios": "^1.3.5",
+        "connect-flash": "^0.1.1",
+        "dotenv": "^16.4.5",
         "express": "^4.18.2",
+        "express-session": "^1.17.2",
         "pug": "^3.0.2"
+    },
+    "devDependencies": {
+        "nodemon": "^3.1.4"
     }
 }
